--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,37 @@ ul {
 	width: 100%;
 	background: #434343;
 }
+
+/* MODAL */
+
+.overlay {
+    width: 100%;
+    height: 100vh;
+    background: rgba(149, 69, 154, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+}
+
+.modal-form {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 680px;
+    display: none;
+}
+
+.show{
+    display: block;
+}
+
+.btn-close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+}
