--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,12 @@
 
-
 /* SLIDER */
 .slider {
 	display: flex;
-	position: relative;
+	position: relative; 
 	height:411px;
 	background: #EEE4DB;
 	margin-top:69px;
 }
-
 .slider-counter {
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-weight:300;
@@ -19,15 +17,13 @@
 	padding: 0px;
 	margin:18px 44px 0 29px;
 }
-
 .poster {
-	position: absolute;
-	right:100px;
+	position: absolute; 
+	right:100px; 
 	bottom:9px;
 }
 
 .slider button {
-	outline: none;
 	border: 0px;
 	padding:0;
 	margin:0;
@@ -35,7 +31,6 @@
 	height:3px;
 	background: #D6CAC2;
 }
-
 .slider button:hover,
 .slider li:first-child button {
 	background: #725F5B;
@@ -43,30 +38,24 @@
          
 .slider button:hover {
 	background: #725F5B;
-}
-
+} 
 .slider ul {
 	padding:0px;
 	margin: 7px 0 0 27px;
 }
-
-.slider li {
-	padding: 0;
-	margin:-8px 4px 4px 4px;
-}
+.slider li {padding: 0;margin:-8px 4px 4px 4px;}
 
 .slider-text h1 {
 	font-family: 'Montserrat', Arial, sans-serif;
 	font-weight:700;
 	font-style: normal;
 	font-size: 40px;
-	line-height: 110%;
+	line-height: 110%; 
 	width: 67%;
 	color: #1e0606;
 	padding:0px;
 	margin: 92px 0 0 0;
 }
-
 .slider-text p {
 	font-family: 'Crimson Text', Georgia, serif;
 	font-weight:400;
@@ -77,7 +66,6 @@
 	padding: 0px;
 	margin: 29px 0 0 0;
 }
-
 .slider-btn {
 	display: flex;
 	justify-content: space-evenly;
@@ -97,20 +85,16 @@
 	padding: 0px;
 	margin: 29px 0 0 0;
 }
-
 .slider-btn:hover {
 	background: #C29974;
 }
-
 .slider-btn:active {
 	background: #CFAF91;
 }
-
 .slider-btn:disabled {
 	background: #C1C1C1;
 	color: #E1E1E1;
 }
-
 .slider-footer {
 	position: absolute;
 	display: flex;
@@ -129,7 +113,553 @@
 	text-transform: uppercase;
 }
 
-.wrapper {
-	position: relative;
+/* GOODS */
+.goods {
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-weight:400;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 22px;
+	color: #1E0606;
+	margin-top: 91px;
+}
+.goods h2 {
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-weight:700;
+	font-style: normal;
+	font-size: 38px;
+	line-height: 46px;
+	text-transform: uppercase;
+	margin: 0px 0px 28px;
+}
+
+.goods ul {
+	display: flex;
+	justify-content:space-between;
+	padding-left:0;
+	margin: 0px 0px 28px;
+}
+.goods-slider {
 	display: flex;
 }
+.goods a {
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-weight:700;
+	font-style: normal;
+	font-size: 26px;
+	line-height: 32px;
+	text-align: center;
+	text-transform: uppercase;
+	color: #FFFFFF;
+	text-shadow: 0px 0px 40px rgba(147, 3, 3, 0.25);
+	text-decoration: none;
+}
+
+.goods a:hover {
+	text-decoration: underline;
+}
+.goods li{
+	position: relative;
+}
+.goods li p {
+	display: flex;
+	justify-content:space-evenly;
+	align-items:center;
+	position: absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	padding:40px;
+	padding-top: 3px;
+}
+.goods-slider-text {
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-weight:400;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 22px;
+	width:580px;
+	margin: -2px 0px 0px 16px;
+}
+.goods-slider-arrow {
+	width: 36px;
+	height:36px;
+	z-index:5;
+	padding:0;
+	margin-right: 6px;
+	background: rgba(112, 187, 220, 0.2);
+}
+.goods-slider-arrow:hover {
+	opacity:0.5;
+}	
+
+
+/* ADDITIONAL-INFORM */	
+.additional-inform {
+	margin-top: 91px;
+}
+.additional-inform h2 {
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-weight:700;
+	font-style: normal;
+	font-size: 38px;
+	line-height: 46px;
+	text-transform: uppercase;
+	color: #1E0606;
+	margin-bottom:5px;
+	
+}	
+.additional-inform ul {
+	display:flex;
+	padding-left:0;
+}	
+.additional-inform .text {
+	flex-direction:column;
+	align-items: flex-start;
+	font-family: 'Crimson Text', Georgia, serif;
+	font-weight:400;
+	font-style: italic;
+	font-size: 26px;
+	line-height: 32px;
+	color: #1E0606;
+}
+.additional-inform .text ul {
+	margin-bottom: 6px;
+}
+.additional-inform .text li {
+	display: block;
+	position: relative;
+	width: 326px;
+	height: 55px;
+}
+
+.additional-inform p {
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-weight:400;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 22px;
+	color: #1E0606;
+}
+
+/* LABELS */
+.additional-inform label {
+    position: absolute;
+	top:0;left:0;width:100%;height:100%;
+	padding-top: 13px;
+	padding-left:60px;
+    cursor: pointer;	
+}
+.additional-inform label:hover {
+	background: rgba(112, 187, 220, 0.2);
+}
+.additional-inform .radio:checked + label{
+	background: rgba(112, 187, 220, 0.2);
+	font-weight: 700;
+}
+/* SIDEBAR */
+.additional-inform-sidebar {
+	max-width: 480px; 
+	width: 100%;
+}
+.additional-inform-sidebar{
+	margin-left: 120px;
+}
+.additional-inform-sidebar .text li {
+	margin-left: -60px;
+}
+
+/* BUTTONS */
+.slider-button {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+    background: #000000;    
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-weight:700;
+	font-style: normal;
+    font-size: 16px;
+    line-height: 22px;
+	color: #FFFFFF;
+    max-width: 161px;
+	width: 100%;
+	height: 40px;
+    border: none;
+    text-transform: uppercase;    
+	padding: 0px;
+	margin: 29px 0 0 0;
+}
+
+.slider-button:hover {
+	background: #C29974;
+}
+
+.slider-button:active {
+	background: #CFAF91;
+}
+
+.slider-button:disabled {
+	background: #C1C1C1;
+	color: #E1E1E1;
+}
+.additional-inform-button {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+    background: #000000;    
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-weight:700;
+	font-style: normal;
+    font-size: 16px;
+    line-height: 22px;
+	color: #FFFFFF;
+    max-width: 149px;
+	width: 100%;
+	height: 40px;
+    border: none;
+    text-transform: uppercase;    
+	padding: 0px;
+	margin: 29px 0 0 0;
+}
+
+.additional-inform-button:hover {
+	background: #C29974;
+}
+
+.additional-inform-button:active {
+	background: #CFAF91;
+}
+
+.additional-inform-button:disabled {
+	background: #C1C1C1;
+	color: #E1E1E1;
+}
+.about-us-button {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+    background: #000000;    
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-weight:700;
+	font-style: normal;
+    font-size: 16px;
+    line-height: 22px;
+	color: #FFFFFF;
+    max-width: 123px;
+	width: 100%;
+	height: 40px;
+    border: none;
+    text-transform: uppercase;    
+	padding: 0px;
+	margin: 19px 0 0 0;
+}
+
+.about-us-button:hover {
+	background: #C29974;
+}
+
+.about-us-button:active {
+	background: #CFAF91;
+}
+
+.about-us-button:disabled {
+	background: #C1C1C1;
+	color: #E1E1E1;
+}
+
+/* BRANDS */	
+.brands {
+margin-top: 91px;
+}
+.brands ul {
+	display:flex;
+	justify-content:space-between;
+	padding-left:0;
+}	
+/* ABOUT US */	
+.about-us {
+	display: flex;
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-weight:400;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 22px;
+	color: #1E0606;
+	margin-top:105px;
+	margin-bottom:147px;
+}
+.about-us h2{
+	position: absolute; 
+	top:-56px;
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-weight:700;
+	font-style: normal;
+	font-size: 38px;
+	line-height: 46px;
+	text-transform: uppercase;
+	color: #1E0606;
+}
+.about-us h4{
+	margin-top: 4px;
+	margin-bottom:0px;
+	font-family: 'Crimson Text', Georgia, serif;
+	font-weight:400;
+	font-style: italic;
+	font-size: 26px;
+	line-height: 32px;
+	color: #1E0606;
+}
+.about-us p {
+	margin-top:12px; 
+	margin-bottom:4px;
+}
+
+.about-us div div {
+	position: relative;
+	width: 543px;
+	background: #ddd;background: #E1F0F7;
+	margin-right: 57px;
+	padding: 30px 30px 35px 30px;
+}
+
+.about-us .about-us-map {
+	position: absolute;
+	left: 30px;
+	bottom:-114px;
+	padding:0;
+	width:100%;
+	background: #FCFCF7;
+	width: 483px; 
+	height: 196px; 
+	background-image: url(images/map.png);
+}
+.about-us div .about-us-inner {
+	padding-bottom: 102px;
+}
+
+/* CROSS */
+.btn-close {
+	position: absolute; 
+	top:0; 
+	right:-41px;
+	background-image: url(images/bg-cross.png);
+	width:31px; 
+	height:31px;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+}
+.btn-close:hover {
+	opacity: 0.5;
+}
+.btn-close:active {
+	opacity: 0.3;
+}
+.btn-close:disabled {
+	opacity:0;
+} 
+/*modal*/
+
+.modal-contacts {
+	font-weight:400;
+	font-style: normal;
+	margin: 0px auto 61px auto;	
+}
+.modal-contact-form {
+    max-width: 680px;
+    width: 100%;
+    background: #E5EAF8;
+	font-family: 'Roboto', Arial, sans-serif;
+	font-weight:400;
+	font-style: normal;
+	font-size:14px;
+	line-height: 19px;
+    margin: 0px 0 0px 0px;
+    padding: 20px 40px 40px 40px ;
+
+}
+.modal-contact-form fieldset {
+    border: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    margin: 20px 0px 0px 0px;
+}
+
+.modal-contact-wrapper {
+	display: flex;
+    flex-direction: column;
+}
+.modal-contact-line {
+    justify-content: space-between;
+}
+.modal-contact-block {
+    max-width: 290px;
+    width: 100%;
+}
+
+.modal-contact-form label {
+    font-size: 14px;
+    line-height: 19px;
+    color: #1E0606;
+	border: none;
+	margin: 3px 0px 2px 0px;
+	padding: 0px 0px 0px 0px;   
+}
+
+.modal-contact-form input,
+.modal-contact-form textarea {
+    height: 50px;
+	background: #FFFFFF;
+	border: 2px solid rgba(0, 0, 0, 0.2);
+    padding-top: 5px; 
+	padding-right:20px;
+	padding-bottom: 5px; 
+	padding-left:20px;
+    font-size: 18px;
+    line-height: 25px;
+}
+
+.modal-contact-form input:hover,
+.modal-contact-form textarea:hover {
+	border: 2px solid rgba(0, 0, 0, 0.3);
+}
+
+.modal-contact-form input:active,
+.modal-contact-form textarea:active {
+	border: 2px solid rgba(0, 0, 0, 0.2);
+}
+
+.modal-contact-form textarea {
+    height: auto;
+	min-height: 150px;
+    resize: none;
+}
+.modal-checkbox {
+	margin-top: 5px;
+}
+
+/********************************************/
+.modal-checkbox label,
+.modal-radiobox label {
+    position: relative;
+	padding-top: 0px;
+    padding-left: 32px;
+    cursor: pointer;
+}
+
+
+
+.modal-checkbox label:before,
+.modal-checkbox label:after,
+.modal-radiobox label:before,
+.modal-radiobox label:after  {
+    content: '';
+    position: absolute;
+    display: block;
+}
+.modal-checkbox label:before {
+    width: 15px;
+    height: 15px;
+    top: -1px;
+    left: 0;
+	border: 2px solid #C29974;
+	border-radius: 3px;	
+}
+.modal-checkbox label:after {
+    width: 14px;
+    height: 15px;
+    top: -1px;
+    left: 3px;
+	background-image: url('images/checkbox.png');
+    background-repeat: no-repeat;
+    opacity: 0;
+}
+
+.modal-input:checked + label:after { /*галка видима*/
+    opacity: 1;
+}
+
+
+.modal-input:focus + label:before,  /*доступность*/
+.modal-input:hover + label:before {
+	border: 2px solid #836E5B;
+}
+ 
+
+/*************************************/
+.modal-contact-button {
+	border: none;
+	background: #000000;
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-weight:700;
+	font-style: normal;
+	font-size:16px;
+	line-height: 22px;
+	color:white;
+	text-transform: uppercase;
+	margin: 15px 0 0px 0;
+	padding: 9px 22px;
+	cursor: pointer;
+}
+.modal-contact-button:hover {
+	background: #C29974;
+}
+.modal-contact-button:active {
+	background: #CFAF91;
+}
+.modal-contact-button:disabled {
+	color: #E1E1E1;
+	background: #C1C1C1;
+}
+/* CROSS */
+.btn-close {
+	position: absolute; 
+	top:0; 
+	right:-41px;
+	background-image: url(images/bg-cross.png);
+	width:31px; 
+	height:31px;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	cursor: pointer;
+}
+.btn-close:hover {
+	opacity: 0.5;
+}
+.btn-close:active {
+	opacity: 0.3;
+}
+.btn-close:disabled {
+	opacity:0;
+} 
+.modal-wrapper {
+	position: relative;
+	width: 680px;
+	margin:0 auto;
+	padding:0px;
+}
+.overlay {
+	width:100%;
+	height:100vh;
+	background: rgba(125, 151, 218, 0.8);
+	display: none;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+}
+
+.modal-form {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	display: none;
+}
+
+.show {
+	display: block;
+}
+
