--- a/css/toys.css
+++ b/css/toys.css
@@ -1,11 +1,6 @@
 /* TOYS */
 .select-bar {
 	margin-top: 0;
-	font-family: 'Open Sans', Arial, sans-serif;
-	font-weight:700;
-	font-style: normal;
-	font-size: 16px;
-	line-height: 22px;
 	color: #1E0606;
 	background: rgba(125, 151, 218, 0.2);
 }
@@ -17,8 +12,7 @@
 	font-style: normal;
 	font-size: 16px;
 	line-height: 22px;
-	color: #1E0606;
-	background: transparent;
+	background: transparent;/**/
 }
 .bar {
 	background: transparent;
@@ -26,20 +20,62 @@
 .bar2 {
 	display: flex;
 	padding: 42px 0px 10px 0px;
+	/**/
 	font-family: 'Open Sans', Arial, sans-serif;
 	font-weight:400;
 	font-style: normal;
 	font-size: 16px;
 	line-height: 22px;
-	color: #1E0606;
 }
 
 .bar-ul {
-	padding-left:0;
+	padding-left: 2px;
 	margin-right: 50px;
 	width: 100%;
 }
 
+
+.btn2 {
+	margin-top:38px;
+	text-align: center;
+	width:95px; 
+	height:40px;
+	border: none;
+	outline: none;
+}
+
+
+
+.cost {
+	margin-right: 95px;
+	width: 208px;
+}
+.cost .subject {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 5px 0px 0px 0px;
+}
+
+
+.color {
+	margin-right: 54px;
+}
+.color li {
+	padding-bottom: 15px;
+}
+
+.delivery {
+	margin-right: 20px;
+	margin-left:19px;
+}
+.delivery li {
+	padding: 0px 0px 11px 3px;
+}
+
+.amount {
+	margin-right: 7px;
+}
 .amount ul {
 	display:flex;
 	margin-top:0px;
@@ -51,12 +87,6 @@
 	padding-top:7px;
 	padding-bottom:6px;
 }
-
-
-.amount label:hover {
-	background: #EDDEEB;
-}
-
 .amount label {
 	position: absolute;
 	top:0px;
@@ -65,62 +95,16 @@
 	height:100%;
 	text-align: center;
 	background:#FFFFFF;
-	padding-top: 8px;
+	padding: 9px 4px 0px 0px;
 }
+.amount label:hover {
+	background: #EDDEEB;
+}
+
 .amount .radio:checked + label {
 	background: #F3D0DB;
 }
 
-
-.cost .subject {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-right: 0px;
-	margin-top: 5px;
-	margin-bottom:0px;
-}
-
-[type="checkbox"],
-[type="radio"] {
-	margin-right: 13px;
-}
-
-.btn2 {
-	cursor: pointer;
-	margin-top:36px;
-	font-family: 'Open Sans', Arial, sans-serif;
-	font-weight:700;
-	font-style: normal;
-	font-size: 16px;
-	line-height: 22px;
-	text-align: center;
-	text-transform: uppercase;
-	color: #FFFFFF;
-	background: #000000;
-	width:95px; 
-	height:40px;
-	border: none;
-}
-
-.cost {
-	margin-right: 95px;
-	width: 208px;
-}
-.color li, 
-.delivery li {
-	padding-bottom: 15px;
-}
-.color {
-	margin-right: 54px;
-}
-.delivery {
-	margin-right: 20px;
-	margin-left:21px;
-}
-.amount {
-	margin-right: 7px;
-}
 
 /* RANGE */
 .range {
@@ -144,12 +128,19 @@
 }
 /***************/
 
-.group-input label,
+.group-input label {
+    position: relative;
+	margin: 0px 0px 0px -3px;
+	padding: 1px 0px 0px 29px;
+    cursor: pointer;
+}
+
+
 .group-radio label {
     position: relative;
 	padding-top: 0px;
-    padding-left: 32px;
-	margin-left: -2px;
+    padding-left: 29px;
+	margin-left: -4px;
     cursor: pointer;
 }
 
@@ -166,7 +157,7 @@
 .group-input label:before{
     width: 19px;
     height: 19px;
-    top: -1px;
+    top: 1px;
     left: 0;
 	border: 2px solid #C29974;
 	border-radius: 3px;	
@@ -175,7 +166,7 @@
 .group-input label:after {
     width: 15px;
     height: 15px;
-    top: 1px;
+    top: 3px;
     left: 2px;
 	border-radius: 3px;
 	background: #FFFFFF;
@@ -186,7 +177,7 @@
 .group-radio label:before{
     width: 19px;
     height: 19px;
-    top: -1px;
+    top: 1px;
     left: 0;
 	border: 2px solid #C29974;
 	border-radius: 50%;	
@@ -195,7 +186,7 @@
 .group-radio label:after {
     width: 11px;
     height: 11px;
-    top: 2.5px;
+    top: 5px;
     left: 4px;
 	background: #c29974;
 	border-radius: 50%;
@@ -214,21 +205,12 @@
 
 /*disabled*/
 .input:disabled + label:before{
-    width: 19px;
-    height: 19px;
-    top: -1px;
-    left: 0;
 	border: 2px solid #E1CDBA;
 	border-radius: 3px;
 }
 
 
 .input:disabled + label:after {
-    width: 15px;
-    height: 15px;
-    top: 1px;
-    left: 2px;
-	border-radius: 3px;
 	background: #FFFFFF;
 	background-image: url('../images/checkbox-disabled.png');
     background-repeat: no-repeat;
@@ -236,21 +218,12 @@
 }
 
 .radio:disabled + label:before{
-    width: 19px;
-    height: 19px;
-    top: -1px;
-    left: 0;
 	border: 2px solid #E1CDBA;
-	border-radius: 50%;	
+		
 }
 
 .radio:disabled + label:after {
-    width: 11px;
-    height: 11px;
-    top: 2.5px;
-    left: 4px;
-	background: #E1CDBA;
-	border-radius: 50%;
+	background: #E1CDBA;	
     opacity: 0;
 }
 .radio:disabled + label,
