--- a/css/toys.css
+++ b/css/toys.css
@@ -1,18 +1,21 @@
 /* TOYS */
 .select-bar {
 	margin-top: 0;
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-size: 16px;
+	line-height: 22px;
+	font-style: normal;
 	color: #1E0606;
 	background: rgba(125, 151, 218, 0.2);
 }
 
 .select-bar h2 {
-	margin-top: 0;
-	font-family: 'Open Sans', Arial, sans-serif;
+	margin-top: 0;	
 	font-weight:700;
-	font-style: normal;
 	font-size: 16px;
 	line-height: 22px;
-	background: transparent;/**/
+	font-style: normal;	
+	background: transparent;
 }
 .bar {
 	background: transparent;
@@ -20,12 +23,7 @@
 .bar2 {
 	display: flex;
 	padding: 42px 0px 10px 0px;
-	/**/
-	font-family: 'Open Sans', Arial, sans-serif;
 	font-weight:400;
-	font-style: normal;
-	font-size: 16px;
-	line-height: 22px;
 }
 
 .bar-ul {
@@ -256,8 +254,6 @@
 	font-family: 'Open Sans', Arial, sans-serif;
 	font-weight:400;
 	font-style: normal;
-	font-style: normal;
-	font-weight: normal;
 	font-size: 14px;
 	line-height: 19px;
 	text-align: center;
@@ -270,8 +266,6 @@
 	font-family: 'Open Sans', Arial, sans-serif;
 	font-weight:700;
 	font-style: normal;
-	font-style: normal;
-	font-weight: bold;
 	font-size: 16px;
 	line-height: 22px;
 	text-align: center;
