--- a/css/toys.css
+++ b/css/toys.css
@@ -62,6 +62,10 @@
 .color li {
 	padding-bottom: 15px;
 }
+.color li:hover,
+.delivery li:hover {
+	text-decoration: underline;
+}
 
 .delivery {
 	margin-right: 20px;
@@ -93,8 +97,13 @@
 	height:100%;
 	text-align: center;
 	background:#FFFFFF;
-	padding: 9px 4px 0px 0px;
+	padding: 8px 4px 0px 0px;
+	border: 1px solid transparent;
 }
+.amount .radio:focus + label {
+	border-color: #000000;
+}
+
 .amount label:hover {
 	background: #EDDEEB;
 }
